Integrate real S25 GenieX baked profiles